--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Document</title>
 </head>
 <body>
+   
+    <h1 id="title">Kkkkk</h1> 
+    <!-- <h1 class="title">Kkkkk</h1> -->
+    
+
+
+
+
+
+
+
     <script src="new.js"></script>
 </body>
 </html>
