--- a/index.html
+++ b/index.html
@@ -6,17 +6,24 @@
     <title>Document</title>
 </head>
 <body>
-   
-    <h1 id="title">Kkkkk</h1> 
-    <!-- <h1 class="title">Kkkkk</h1> -->
+   <div id="container">
+    <h1>Dice roller</h1>
+    <input type="number" id="numberDice" value="1" min="1">
+    <button id="btn">Roll Dice</button>
+    <div id="result"></div>
+    <div id="images"></div>
+
+
+
+   </div>
+
+
+
+
+
+
+
     
-
-
-
-
-
-
-
-    <script src="new.js"></script>
 </body>
+<script src="new.js"></script>
 </html>
