--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DiceRoller</title>
+     <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <div id="container">
     <h1>Dice roller</h1>
+    <label for="$ of dice:"></label>
     <input type="number" id="numberDice" value="1" min="1">
     <button id="btn">Roll Dice</button>
     <div id="result"></div>
